--- a/app/assets/css/nav.css
+++ b/app/assets/css/nav.css
@@ -18,6 +18,7 @@
   padding: 2rem;
   margin-bottom: 1rem;
   border-bottom: 1px solid var(--color-border);
+  border-top: 1px solid var(--color-border);
 }
 
 .nav-title {
