--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -232,3 +232,19 @@
   left: 695px;
   top: 125px;
 }
+
+#loader {
+  border: 7px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 7px solid #3498db;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+  margin-left: 50%;
+  margin-top: 25%;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
