--- a/app/assets/css/demo.css
+++ b/app/assets/css/demo.css
@@ -3,9 +3,11 @@
 .demo:first-of-type {
   margin-top: 2rem;
 }
+
 .demo:last-of-type {
   margin-bottom: 2rem;
 }
+
 @media (min-width: 940px) {
   .demo:last-of-type {
     margin-bottom: 4rem;
@@ -46,23 +48,27 @@
   left: 0;
   width: 2px;
   height: 50%;
-  background-color: hsl(0,0%,88%);
-  transition: transform .2s cubic-bezier(.4,.1,0,1);
+  background-color: hsl(0, 0%, 88%);
+  transition: transform .2s cubic-bezier(.4, .1, 0, 1);
 }
+
 .demo-toggle-button:before {
   top: 0;
   transform-origin: bottom center;
   transform: translateX(.7em) rotate(-30deg) scale(.75);
 }
+
 .demo-toggle-button:after {
   bottom: 0;
   transform-origin: top center;
   transform: translateX(.7em) rotate(30deg) scale(.75);
 }
+
 .is-open .demo-toggle-button:before,
 .is-open .demo-toggle-button:after {
   transform: rotate(0deg);
 }
+
 .demo-toggle-button:focus:before,
 .demo-toggle-button:focus:after {
   background-color: currentColor;
@@ -77,6 +83,7 @@
   text-transform: uppercase;
   color: var(--color-subtle);
 }
+
 .demo-meta-divider {
   margin: 0 .5em;
 }
@@ -94,6 +101,7 @@
   border: 1px solid var(--color-border);
   background-color: var(--color-bg);
 }
+
 .demo-box:before {
   content: "";
   position: absolute;
@@ -111,12 +119,20 @@
   display: block;
   animation: demo-box-fade-in .2s cubic-bezier(0, .20, .20, .96);
 }
+
 @keyframes demo-box-fade-in {
-    0% { opacity: 0; transform: translateY(-20px); }
-  100% { opacity: 1; transform: translateY(0); }
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
-.demo-box > p:first-child {
+.demo-box>p:first-child {
   margin-top: 0;
 }
 
@@ -143,14 +159,18 @@
   padding: .2em 1.2em;
   color: inherit;
   background-color: transparent;
+  margin-bottom: 2px;
 }
+
 .demo-button:focus {
   outline: none;
   background-color: white;
 }
+
 .demo-button:active {
   border-color: var(--color-border);
 }
+
 .demo-button:hover {
   opacity: 0.7;
 }
@@ -165,9 +185,10 @@
   color: inherit;
   background-color: transparent;
 }
+
 .demo-input:focus {
   outline: none;
-  border-color: hsl(0,0%,80%);
+  border-color: hsl(0, 0%, 80%);
   background-color: white;
 }
 
@@ -184,6 +205,7 @@
 .disappear {
   opacity: 0;
 }
+
 .demo-button.smooth-disappear:focus {
   outline: inherit;
   border-color: inherit;
@@ -196,14 +218,15 @@
   margin-top: 2rem;
   padding: 0.2rem 0.5rem 0.2rem 0.5rem;
   border-radius: 6px;
-  background: hsl(194, 60%, 36%) linear-gradient(hsla(0,0%,100%,.85), hsla(0,0%,100%,.85));
+  background: hsl(194, 60%, 36%) linear-gradient(hsla(0, 0%, 100%, .85), hsla(0, 0%, 100%, .85));
   margin: 20px;
   color: hsl(194, 60%, 36%);
 }
+
 .demo-protip h2 {
   margin: 0 0 .5rem 0;
 }
+
 .demo-protip strong {
   font-weight: 600;
 }
-
